Add Movies Category API
